--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
+
+ .hr::before {
+  content: '∿∿∿';
+    color: #D1D5DB;
+    font-size: 2xl;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    transform: translateY(-50%);
+ }
+
+.article-ring-state {
+  @apply transition-all hover:ring ring-teal-500 dark:ring-emerald-400 hover:ring-offset-4 hover:ring-offset-white dark:hover:ring-offset-dark;
+}
+
+
+
+.general-ring-state {
+  @apply transition-all hover:ring ring-midnight dark:ring-gray-100 hover:ring-offset-4 hover:ring-offset-white dark:hover:ring-offset-dark;
+}
+
 .wrapper {
   display: grid;
   grid-template-columns: 1fr min(65ch, calc(100% - 32px)) 1fr;
@@ -17,17 +39,6 @@
   grid-column: 1 / 4;
 }
 
-.article-ring-state {
-  @apply transition-all hover: ring ring-teal-500 dark:ring-emerald-400 hover:ring-offset-4 hover:ring-offset-white dark:hover:ring-offset-dark;
-}
-
-.hr {
-  @apply my-16 w-full border-none text-center h-10 before: content-['∿∿∿'] before:text-[#D1D5DB] before:text-2xl;
-}
-
-.general-ring-state {
-  @apply transition-all hover: ring ring-midnight dark:ring-gray-100 hover:ring-offset-4 hover:ring-offset-white dark:hover:ring-offset-dark;
-}
 
 .dark #carbonads {
   background: #1e293b;
